[DC-1309] Add Check for Blank Lines (#8)
* added check for blank lines

* added function header

* displayed line numbers for empty lines

* ran checks on examples

* removed unnecessary scientific notation check

--- a/tests/resources/examples_erroneous/errors/results.html
+++ b/tests/resources/examples_erroneous/errors/results.html
@@ -147,18 +147,42 @@ h1 {
       <td>person_id</td>
     </tr>
     <tr>
-      <td>measurement.csv</td>
-      <td>Measurement</td>
-      <td>Type mismatch line number 3</td>
-      <td>person_id</td>
+      <td>death.csv</td>
+      <td>Death</td>
+      <td>Incorrect number of columns on line 2: ['', '', '', '', '', '']</td>
       <td></td>
-      <td>integer</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>death.csv</td>
+      <td>Death</td>
+      <td>Incorrect number of columns on line 3: ['', '', '', '', '', '']</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>death.csv</td>
+      <td>Death</td>
+      <td>File contains blank lines on lines 1,2. If there is no data, please only submit the header line.</td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td>measurement.csv</td>
       <td>Measurement</td>
       <td>NULL values are not allowed for column</td>
       <td>person_id</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>measurement.csv</td>
+      <td>Measurement</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss": line numbers (1,2,3,4,5)</td>
+      <td>measurement_datetime</td>
       <td></td>
       <td></td>
     </tr>
@@ -177,6 +201,22 @@ h1 {
       <td>birth_datetime</td>
       <td>birth_datetime</td>
       <td>day_of_birth</td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
+      <td>Invalid date format. Expecting "YYYY-MM-DD": line numbers (4,5)</td>
+      <td>observation_date</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss": line numbers (1,3,5)</td>
+      <td>observation_datetime</td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td>observation.csv</td>
