[DC-1307] Add scientific notation check to aou-ehr-file-check script (#9)
* changed comment

* changed error to show line number instead of error count

* added scientific notation value in error msg

--- a/tests/resources/examples_erroneous/errors/results.html
+++ b/tests/resources/examples_erroneous/errors/results.html
@@ -205,6 +205,30 @@ h1 {
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
+      <td>Scientific notation value '7.23e7' was found on line 2. Scientific notation is not allowed for integer fields.</td>
+      <td>observation_id</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
+      <td>Scientific notation value '7.47e8' was found on line 2. Scientific notation is not allowed for integer fields.</td>
+      <td>observation_type_concept_id</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
+      <td>Type mismatch line number 5</td>
+      <td>observation_id</td>
+      <td>23.890+11</td>
+      <td>integer</td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
       <td>Invalid date format. Expecting "YYYY-MM-DD": line numbers (4,5)</td>
       <td>observation_date</td>
       <td></td>
