--- a/tests/resources/examples_erroneous/errors/results.html
+++ b/tests/resources/examples_erroneous/errors/results.html
@@ -181,10 +181,42 @@ h1 {
     <tr>
       <td>measurement.csv</td>
       <td>Measurement</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss": line numbers (1,2,3,4,5)</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 1</td>
       <td>measurement_datetime</td>
-      <td></td>
-      <td></td>
+      <td>2009-02-02 05:00:00.000000 UTC</td>
+      <td>timestamp</td>
+    </tr>
+    <tr>
+      <td>measurement.csv</td>
+      <td>Measurement</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 2</td>
+      <td>measurement_datetime</td>
+      <td>2009-04-25 05:00:00.000000 UTC</td>
+      <td>timestamp</td>
+    </tr>
+    <tr>
+      <td>measurement.csv</td>
+      <td>Measurement</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 3</td>
+      <td>measurement_datetime</td>
+      <td>2009-04-25 05:00:00.000000 UTC</td>
+      <td>timestamp</td>
+    </tr>
+    <tr>
+      <td>measurement.csv</td>
+      <td>Measurement</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 4</td>
+      <td>measurement_datetime</td>
+      <td>2008-09-02 05:00:00.000000 UTC</td>
+      <td>timestamp</td>
+    </tr>
+    <tr>
+      <td>measurement.csv</td>
+      <td>Measurement</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 5</td>
+      <td>measurement_datetime</td>
+      <td>2008-09-02 05:00:00.000000 UTC</td>
+      <td>timestamp</td>
     </tr>
     <tr>
       <td>person.csv</td>
@@ -229,18 +261,42 @@ h1 {
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
-      <td>Invalid date format. Expecting "YYYY-MM-DD": line numbers (4,5)</td>
+      <td>Invalid date format. Expecting "YYYY-MM-DD" line number 4</td>
       <td>observation_date</td>
-      <td></td>
-      <td></td>
+      <td>1975-9-5</td>
+      <td>date</td>
     </tr>
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss": line numbers (1,3,5)</td>
+      <td>Invalid date format. Expecting "YYYY-MM-DD" line number 5</td>
+      <td>observation_date</td>
+      <td>01-31-1963</td>
+      <td>date</td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 1</td>
       <td>observation_datetime</td>
-      <td></td>
-      <td></td>
+      <td>1989-10-07 22:13:11.1533266</td>
+      <td>timestamp</td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 3</td>
+      <td>observation_datetime</td>
+      <td>1987-04-15 06:06:30.6260548</td>
+      <td>timestamp</td>
+    </tr>
+    <tr>
+      <td>observation.csv</td>
+      <td>Observation</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 5</td>
+      <td>observation_datetime</td>
+      <td>1983-05-13 15:31:52.3905384</td>
+      <td>timestamp</td>
     </tr>
     <tr>
       <td>observation.csv</td>
