[EOPS-627] OMOP CDM v5.3.1 (#13)
* imported tools directory from curation branch 'danrodney/bq_too'

* stylistically reformatted all json schema files

* updated the schema to omop cdm 5.3.1

* removed unneeded tools directory

* Bugfix/sync date check with bq reqs (#14)

* expanded date and timestamp coverage

* fixed all broken tests and overhauled test module

* removed space in between timezone and datetime portion in some date strings

* Add test on unspecified required field in visit_detail

Co-authored-by: Mark Velez <mav7014@nyp.org>

--- a/tests/resources/examples_erroneous/errors/results.html
+++ b/tests/resources/examples_erroneous/errors/results.html
@@ -80,47 +80,7 @@ h1 {
       <td>Please add/fix incorrect headers at the top of the file, enclosed in double quotes</td>
       <td></td>
       <td>[drug_exposure_id, drug_concept_id, drug_id, drug_exposure_start_date, drug_exposure_start_datetime, drug_exposure_end_date, drug_exposure_end_datetime, verbatim_end_date, drug_type_concept_id, stop_reason, refills, quantity, days_supply, sig, route_concept_id, lot_number, provider_id, visit_occurrence_id, drug_source_value, drug_source_concept_id, route_source_value, dose_unit_source_value]</td>
-      <td>[drug_exposure_id, person_id, drug_concept_id, drug_exposure_start_date, drug_exposure_start_datetime, drug_exposure_end_date, drug_exposure_end_datetime, verbatim_end_date, drug_type_concept_id, stop_reason, refills, quantity, days_supply, sig, route_concept_id, lot_number, provider_id, visit_occurrence_id, drug_source_value, drug_source_concept_id, route_source_value, dose_unit_source_value]</td>
-    </tr>
-    <tr>
-      <td>drug_exposure.csv</td>
-      <td>Drug Exposure</td>
-      <td>Incorrect number of columns on line 2: ['321573', '6', '1506270', '2718581', '2009-12-10', '2009-12-10 00:00:00.000000 UTC', '', '', '', '38000175', '', '', '', '', '', '', '', '54051', '295255', 'J2930', '2718581', '', '']</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>drug_exposure.csv</td>
-      <td>Drug Exposure</td>
-      <td>Incorrect number of columns on line 3: ['321572', '6', '46287340', '2718292', '2009-12-10', '2009-12-10 00:00:00.000000 UTC', '', '', '', '38000175', '', '', '', '', '', '', '', '54051', '295255', 'J0690', '2718292', '', '']</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>drug_exposure.csv</td>
-      <td>Drug Exposure</td>
-      <td>Incorrect number of columns on line 4: ['321571', '6', '708298', '2718495', '2009-12-10', '2009-12-10 00:00:00.000000 UTC', '', '', '', '38000175', '', '', '', '', '', '', '', '54051', '295255', 'J2250', '2718495', '', '']</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>drug_exposure.csv</td>
-      <td>Drug Exposure</td>
-      <td>Incorrect number of columns on line 5: ['586792', '7', '40164897', '45151573', '2010-12-15', '2010-12-15 00:00:00.000000 UTC', '', '', '', '38000175', '', '', '200.0', '30', '', '', '', '', '', '24724001650', '45151573', '', '']</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>drug_exposure.csv</td>
-      <td>Drug Exposure</td>
-      <td>Incorrect number of columns on line 6: ['586736', '7', '19018875', '45293299', '2010-02-04', '2010-02-04 00:00:00.000000 UTC', '', '', '', '38000175', '', '', '60.0', '30', '', '', '', '', '', '55045213505', '45293299', '', '']</td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>[drug_exposure_id, person_id, drug_concept_id, drug_exposure_start_date, drug_exposure_start_datetime, drug_exposure_end_date, drug_exposure_end_datetime, verbatim_end_date, drug_type_concept_id, stop_reason, refills, quantity, days_supply, sig, route_concept_id, lot_number, provider_id, visit_occurrence_id, visit_detail_id, drug_source_value, drug_source_concept_id, route_source_value, dose_unit_source_value]</td>
     </tr>
     <tr>
       <td>drug_exposure.csv</td>
@@ -137,6 +97,14 @@ h1 {
       <td>person_id</td>
       <td></td>
       <td>person_id</td>
+    </tr>
+    <tr>
+      <td>drug_exposure.csv</td>
+      <td>Drug Exposure</td>
+      <td>Column missing in file</td>
+      <td>visit_detail_id</td>
+      <td></td>
+      <td>visit_detail_id</td>
     </tr>
     <tr>
       <td>drug_exposure.csv</td>
@@ -171,52 +139,52 @@ h1 {
       <td></td>
     </tr>
     <tr>
+      <td>device_exposure.csv</td>
+      <td>Device Exposure</td>
+      <td>Please add/fix incorrect headers at the top of the file, enclosed in double quotes</td>
+      <td></td>
+      <td>[device_exposure_id, person_id, device_concept_id, device_exposure_start_date, device_exposure_start_datetime, device_exposure_end_date, device_exposure_end_datetime, device_type_concept_id, unique_device_id, quantity, provider_id, visit_occurrence_id, device_source_value, device_source_concept_id]</td>
+      <td>[device_exposure_id, person_id, device_concept_id, device_exposure_start_date, device_exposure_start_datetime, device_exposure_end_date, device_exposure_end_datetime, device_type_concept_id, unique_device_id, quantity, provider_id, visit_occurrence_id, visit_detail_id, device_source_value, device_source_concept_id]</td>
+    </tr>
+    <tr>
+      <td>device_exposure.csv</td>
+      <td>Device Exposure</td>
+      <td>Incorrect number of columns on line 2: ['11', '2', '31', '2020-01-01', '2020-01-01 01:00:00', '', '', '4', '', '5', '6', '7', 'Supply/PACK BASIC:Supply/PACK BASIC', '']</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>device_exposure.csv</td>
+      <td>Device Exposure</td>
+      <td>Incorrect number of columns on line 3: ['12', '2', '32', '2020-02-02', '2020-02-02 02:00:00', '2020-02-03', '2020-02-03 03:00:00', '4', '', ' ', ' ', ' 8', '77334:PR 77334 TREATMENT DEVICES, DESIGN AND CONST', '10']</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>device_exposure.csv</td>
+      <td>Device Exposure</td>
+      <td>Column missing in file</td>
+      <td>visit_detail_id</td>
+      <td></td>
+      <td>visit_detail_id</td>
+    </tr>
+    <tr>
+      <td>device_exposure.csv</td>
+      <td>Device Exposure</td>
+      <td>Column not in expected order</td>
+      <td>device_source_value</td>
+      <td>device_source_value</td>
+      <td>visit_detail_id</td>
+    </tr>
+    <tr>
       <td>measurement.csv</td>
       <td>Measurement</td>
       <td>NULL values are not allowed for column</td>
       <td>person_id</td>
       <td></td>
       <td></td>
-    </tr>
-    <tr>
-      <td>measurement.csv</td>
-      <td>Measurement</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 1</td>
-      <td>measurement_datetime</td>
-      <td>2009-02-02 05:00:00.000000 UTC</td>
-      <td>timestamp</td>
-    </tr>
-    <tr>
-      <td>measurement.csv</td>
-      <td>Measurement</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 2</td>
-      <td>measurement_datetime</td>
-      <td>2009-04-25 05:00:00.000000 UTC</td>
-      <td>timestamp</td>
-    </tr>
-    <tr>
-      <td>measurement.csv</td>
-      <td>Measurement</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 3</td>
-      <td>measurement_datetime</td>
-      <td>2009-04-25 05:00:00.000000 UTC</td>
-      <td>timestamp</td>
-    </tr>
-    <tr>
-      <td>measurement.csv</td>
-      <td>Measurement</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 4</td>
-      <td>measurement_datetime</td>
-      <td>2008-09-02 05:00:00.000000 UTC</td>
-      <td>timestamp</td>
-    </tr>
-    <tr>
-      <td>measurement.csv</td>
-      <td>Measurement</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 5</td>
-      <td>measurement_datetime</td>
-      <td>2008-09-02 05:00:00.000000 UTC</td>
-      <td>timestamp</td>
     </tr>
     <tr>
       <td>person.csv</td>
@@ -261,15 +229,7 @@ h1 {
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
-      <td>Invalid date format. Expecting "YYYY-MM-DD" line number 4</td>
-      <td>observation_date</td>
-      <td>1975-9-5</td>
-      <td>date</td>
-    </tr>
-    <tr>
-      <td>observation.csv</td>
-      <td>Observation</td>
-      <td>Invalid date format. Expecting "YYYY-MM-DD" line number 5</td>
+      <td>Invalid date format. Expecting "YYYY-MM-DD": line number 5</td>
       <td>observation_date</td>
       <td>01-31-1963</td>
       <td>date</td>
@@ -277,7 +237,7 @@ h1 {
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 1</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD HH:MM:SS[.SSSSSS]": line number 1</td>
       <td>observation_datetime</td>
       <td>1989-10-07 22:13:11.1533266</td>
       <td>timestamp</td>
@@ -285,7 +245,7 @@ h1 {
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 3</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD HH:MM:SS[.SSSSSS]": line number 3</td>
       <td>observation_datetime</td>
       <td>1987-04-15 06:06:30.6260548</td>
       <td>timestamp</td>
@@ -293,7 +253,7 @@ h1 {
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD hh:mm:ss" line number 5</td>
+      <td>Invalid timestamp format. Expecting "YYYY-MM-DD HH:MM:SS[.SSSSSS]": line number 5</td>
       <td>observation_datetime</td>
       <td>1983-05-13 15:31:52.3905384</td>
       <td>timestamp</td>
