reduced date errors to the first instance (#15)

--- a/tests/resources/examples_erroneous/errors/results.html
+++ b/tests/resources/examples_erroneous/errors/results.html
@@ -245,26 +245,18 @@ h1 {
     <tr>
       <td>observation.csv</td>
       <td>Observation</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD HH:MM:SS[.SSSSSS]": line number 3</td>
-      <td>observation_datetime</td>
-      <td>1987-04-15 06:06:30.6260548</td>
-      <td>timestamp</td>
-    </tr>
-    <tr>
-      <td>observation.csv</td>
-      <td>Observation</td>
-      <td>Invalid timestamp format. Expecting "YYYY-MM-DD HH:MM:SS[.SSSSSS]": line number 5</td>
-      <td>observation_datetime</td>
-      <td>1983-05-13 15:31:52.3905384</td>
-      <td>timestamp</td>
-    </tr>
-    <tr>
-      <td>observation.csv</td>
-      <td>Observation</td>
       <td>Type mismatch line number 3</td>
       <td>observation_type_concept_id</td>
       <td>unknown</td>
       <td>integer</td>
+    </tr>
+    <tr>
+      <td>visit_detail.csv</td>
+      <td>Visit Detail</td>
+      <td>NULL values are not allowed for column</td>
+      <td>visit_occurrence_id</td>
+      <td></td>
+      <td></td>
     </tr>
   </tbody>
 </table>
